# slides

./: .gitignore  Bowling.java  Bowling.py  Cargo.toml  Carousel.java  Frame.java  Lexer.hs  Lexer.x  List.lhs  Main.agda  Main.agdai  Main.hs  Main.lhs  Main.scala  Makefile  MiniPan.lhs  MyIVars.hs  MyLVars.hs  MyThreads.hs  Parser.hs  Parser.y  README.md  Slides.lhs  auto_check.sh  bowling.cabal  cabal.project  check.sh  env.sh  free-category.cabal  ghcid.sh  git-slides.vim  implicit.kl  kitty.cabal  language.vim  main.rs  mempty.kl  mustache.c  package.yaml  results  runGhci.sh  (+7 more)
example-remote/refs/heads/: master
example-repo/: Makefile  a.out  a.out.stackdump  hello.c  hello.cpp  hello.h  main.cpp
example-repo/dotgit/: BISECT_EXPECTED_REV  BISECT_LOG  COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
example-repo/dotgit/logs/: HEAD
example-repo/dotgit/logs/refs/: stash
example-repo/dotgit/logs/refs/heads/: master  mybranch  stash
example-repo/dotgit/logs/refs/heads/topic/: myfeature  myfeature1  myfeature2  myfeature3
example-repo/dotgit/logs/refs/remotes/origin/: master
example-repo/dotgit/rebase-apply/: 0001  author-script  info  patch
example-repo/dotgit/refs/: stash
example-repo/dotgit/refs/bisect/: bad  good-90b35f880001232068d943d87630390de5253b49
example-repo/dotgit/refs/heads/: master  mybranch  stash
example-repo/dotgit/refs/heads/topic/: myfeature1  myfeature2  myfeature3
example-repo/dotgit/refs/remotes/origin/: master
plugin/: git-slides.vim
src/: Bowling.hs  Doc.hs  Main.hs  Slide.core  Slide.hs  main.rs
src/Ersatz/: Simple.hs
src/Hasktorch/: Simple.hs
src/Hasktorch/Typed/: Simple.hs
