Name:                bowling
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            A skeleton from which to start your own project.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/bowling#readme
License:             PublicDomain
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

-- Category:            Codec
-- Category:            Concurrency
-- Category:            Control
-- Category:            Data
-- Category:            Database
-- Category:            Development
-- Category:            Distribution
-- Category:            Game
-- Category:            Graphics
-- Category:            Language
Category:            Math
-- Category:            Network
-- Category:            Sound
-- Category:            System
-- Category:            Testing
-- Category:            Text
-- Category:            Web

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

Library
  hs-source-dirs: src
  
  Exposed-modules:     Bowling
  -- Other-modules:       
  
  Build-depends:       base >= 4 && < 5
